--- a/MVC_Assignment4/Views/Shared/_Layout.cshtml
+++ b/MVC_Assignment4/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
 					<li>@Html.ActionLink("Home", "Index", "Home")</li>
 					<li>@Html.ActionLink("About", "About", "Home")</li>
 					<li>@Html.ActionLink("Albums", "Index", "Album")</li>
+					<li>@Html.ActionLink("Genre", "Index", "MusicGenre")</li>
 				</ul>
 			</div>
 		</div>
