--- a/MVC_Assignment4/Views/MusicGenre/Details.cshtml
+++ b/MVC_Assignment4/Views/MusicGenre/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model MVC_Assignment4.Models.MusicGenre
+﻿@*@model MVC_Assignment4.Models.MusicGenre*@
+@model MVC_Assignment4.ViewModels.ArtistGenre
 
 @{
     ViewBag.Title = "Details";
@@ -10,17 +11,32 @@
     <h4>MusicGenre</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.GenreType)
-        </dt>
+		<dt>
+			@Model.Artist
+		</dt>
+		<dd>
+			@foreach (var item in Model.Genre)
+			{
+				@item.GenreType
+				<br />
+			}
+			@*@for (int i = 0; i < Model.Genre.Count(); i++)
+			{
+				@Model.Genre.ElementAt(i)
+				<br />
+			}*@
+		</dd>
+        @*<dt>
+            @Html.DisplayNameFor(model => model.Artist)
+        </dt>*@
 
-        <dd>
-            @Html.DisplayFor(model => model.GenreType)
-        </dd>
+        @*<dd>
+            @Html.DisplayFor(model => model.Genre)
+        </dd>*@
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MusicGenreId }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.MusicGenreId }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
